Add args for the integration task.